Fix horizontal scrollbar

--- a/media/main.css
+++ b/media/main.css
@@ -1,7 +1,3 @@
-body {
-width: 100%;
-}
-
 .g {
 width:100%;
 text-align: center;
